# fractional

./: CMakeLists.txt  README.md
.github/workflows/: fractional-test.yml
include/: expression.h  fractional.h
include/test/: test.cpp
src/: expression.cpp  fractional.cpp
